# documate

./: .gitignore  .pre-commit-hooks.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  documate.config.json  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: ARCHITECTURE.md  README.md
docs/architecture/: scripts.coverage_report.md  scripts.scan_hygiene.sh.md  scripts.scan_pii.sh.md  src.documate.__init__.md  src.documate.anchors.md  src.documate.briefs.md  src.documate.check.md  src.documate.cli.md  src.documate.config.md  src.documate.core.md  src.documate.docs.md  src.documate.drift.md  src.documate.extract.md  src.documate.graphdb.md  src.documate.prose.md  src.documate.resolve.md  src.documate.site.md  src.documate.stats.md  src.documate.ui.md  src.documate.undo.md
docs/guides/: getting-started.md  how-it-works.md
hooks/: pre-commit
notes/: v2-direction.md
scripts/: coverage_report.py  scan_hygiene.sh  scan_pii.sh
src/documate/: __init__.py  anchors.py  briefs.py  check.py  cli.py  config.py  core.py  docs.py  drift.py  extract.py  graphdb.py  prose.py  resolve.py  site.py  stats.py  ui.py  undo.py
src/documate/_engine/: ORIGIN.md  __init__.py  graph.py  incremental.py  parser.py
tests/: test_documate.py
